# dual_arm_RL_motion

./: .gitignore  LICENSE  README.md
ROBOTIS/DynamixelSDK/: README.md  ReleaseNote.txt
ROBOTIS/DynamixelSDK/c++/: CHANGELOG.rst  package.xml
ROBOTIS/ROBOTIS-Framework/: .robotis_framework.rosinstall  .travis.yml  README.md
ROBOTIS/ROBOTIS-Framework-msgs/: .travis.yml  README.md
ROBOTIS/ROBOTIS-Framework/robotis_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS/ROBOTIS-Framework/robotis_controller/include/robotis_controller/: robotis_controller.h
ROBOTIS/ROBOTIS-Framework/robotis_controller/src/robotis_controller/: robotis_controller.cpp
ROBOTIS/ROBOTIS-Framework/robotis_device/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS/ROBOTIS-Framework/robotis_device/devices/dynamixel/: GRIPPER.device  GRIPPER_TORQUE.device  H42-20-S300-R(A).device  H42-20-S300-R.device  H54-100-B210-R-NR.device  H54-100-S500-R(A).device  H54-100-S500-R.device  H54-200-B500-R.device  H54-200-S500-R(A).device  H54-200-S500-R.device  L42-10-S300-R.device  L54-30-S400-R.device  L54-30-S500-R.device  L54-50-S290-R.device  L54-50-S500-R.device  M42-10-S260-R.device  M54-40-S250-R.device  M54-60-S250-R.device  MX-106.device  MX-28.device  MX-64.device  RH-P12-RN.device  XM-430-W210.device  XM-430-W350.device  XM-430.device
ROBOTIS/ROBOTIS-Framework/robotis_device/devices/sensor/: CM-740.device  OPEN-CR.device
ROBOTIS/ROBOTIS-Framework/robotis_device/include/robotis_device/: control_table_item.h  device.h  dynamixel.h  dynamixel_state.h  robot.h  sensor.h  sensor_state.h  time_stamp.h
ROBOTIS/ROBOTIS-Framework/robotis_device/src/robotis_device/: dynamixel.cpp  robot.cpp  sensor.cpp
ROBOTIS/ROBOTIS-Framework/robotis_framework/: CHANGELOG.rst  CMakeLists.txt  package.xml
arm_control/: CMakeLists.txt  README.md  package.xml  setup.py
arm_control/msg/: WebCmd.msg
arm_control/scripts/: simple_collision.py  web_cmd.py
disposing/: README.md
disposing/disposing_vision/: CMakeLists.txt  package.xml
disposing/yolov3_sandwich/: CMakeLists.txt  opencv_MouseCallback.py  package.xml  resize.py  train.py  train.txt  train_nuts.txt  yolo.py  yolo_video.py
imu_3d/: README.md
imu_3d/src/: imu_3d.cpp
launch/: origin.launch
linear_motion/: CMakeLists.txt  README.md  package.xml
linear_motion/launch/: origin.launch
linear_motion/msg/: Slide_Feedback.msg
linear_motion/scripts/: Control2LM_arg.sh  LM_Control.py  arm_task.py
linear_motion/src/: linear_z.cpp
mobile_platform/: CMakeLists.txt  package.xml  readme.md
mobile_platform/config/: stage2_qr.yaml  stage_imu.yaml  stage_qr.yaml  stage_rfid.yaml  vision.yaml
mobile_platform/launch/: stage2_qr.launch  stage_imu.launch  stage_qr.launch  stage_rfid.launch
mobile_platform/msg/: scaninfo.msg
mobile_platform/qrcode/: qrcode.py
mobile_platform/scan_black/: Image.py  Utils.py  detect_black.py  detect_black2  test.py  test2.py
mobile_platform/srv/: strategy_start.srv
mobile_platform/strategy/: main.py  main2.py  strategy.py  strategy2 (copy).py
motion/: CMakeLists.txt
motion/Attack_motion/: base_control.cpp
motion/Mecanum_motion/: CMakeLists.txt  base_control.cpp  base_control.h  motion.cpp
motion/common/: motor_data.h
nodejs_pkg/: CMakeLists.txt  package.xml
nodejs_pkg/myapp/: index.js  package-lock.json  package.json  server.cert  server.key
nodejs_pkg/srv/: LetRobotSay.srv
nodejs_pkg/web/: demo03.html  example_simple_exportwav.html  index.html  index_simple.html
robot_description/Slide_rail/: CMakeLists.txt
robot_description/dual_arm_control/: package.xml
robot_description/dual_arm_control/launch/: dual_arm_control.launch  single_arm_control.launch  single_arm_rqt.launch
robot_description/dual_arm_control/src/: robot_pub.cpp  robot_server.cpp
robot_description/dual_arm_control/srv/: robot.srv
robot_description/mobile_dual_arm/: package.xml
robot_description/mobile_dual_arm/launch/: mobile_dual_arm.launch
robot_description/mobile_dual_arm/scene/meshes/: bin.STL  drink.STL  lunchbox.STL  sandwich.STL
robot_description/mobile_dual_arm/worlds/: mobile_dual_arm.world
robot_description/mobile_table/: CMakeLists.txt  package.xml
robot_description/suction_urdf/: CMakeLists.txt  package.xml
strategy/: CMakeLists.txt  README.md  package.xml
strategy/launch/: stocking.launch
strategy/src/: custom_server.py  dispo.py  disposing.py  drl_test.py  example.py  object_pos.py  stocking_task.py  test.py
strategy/srv/: AssistantState.srv
train/: CMakeLists.txt  package.xml
train/src/: CheckCollision.py  CheckCollision_tensor.py  CheckCollision_v1.py  DDPG.py  DPPO.2.py  DPPO.py  DPPO_l.py  PPO_run.py  SAC_run.py  SAC_run_v2.py  SAC_run_v3.py  SAC_run_v4.py  SAC_run_v5.py  SAC_run_v6.py  SAC_run_v7.py  SAC_run_v8.py  ddpg.py  env.py  env_axangle.py  env_no_ori.py  env_no_ori_test.py  env_ppo.py  env_v10.py  env_v11.py  env_v12.py  env_v13.py  env_v14.py  env_v15.py  env_v16.py  env_v17.py  env_v18.py  env_v19.py  env_v20.py  env_v21.py  env_v22.py  env_v3.py  env_v4.py  env_v5.py  env_v6.py  env_v7.py  (+31 more)
train/srv/: environment.srv  get_state.srv  move_cmd.srv  move_init.srv  set_goal.srv  set_start.srv
udev_rules/: 99-arduino.rules  99-arm.rules  99-mobile.rules  99-slide.rules  README.md
vacuum/: README.md
vacuum/arduino_ros_vacuumServiceServer/: arduino_ros_vacuumServiceServer.ino
vacuum/vacuum_cmd_msg/: CMakeLists.txt  package.xml
vacuum/vacuum_cmd_msg/cmake/: vacuum_cmd_msg-genmsg-context.py  vacuum_cmd_msg-genmsg.cmake
vacuum/vacuum_cmd_msg/srv/: VacuumCmd.srv
wrs_gazebo/Slide_rail/: package.xml
wrs_gazebo/dual_arm_control/: CMakeLists.txt
wrs_gazebo/dual_arm_control/config/: dual_arm_control.yaml
wrs_gazebo/dual_arm_control/launch/: single_arm_rqt.perspective
wrs_gazebo/dual_arm_control/msg/: robot_msg.msg
wrs_gazebo/mobile_dual_arm/: CMakeLists.txt
wrs_mobile_UI/: mobile_platform.html
wrs_mobile_UI/css/: form.css  manual.css  param.css  vision.css
wrs_mobile_UI/tb3_web/: tb3_race.html
wrs_mobile_UI/新避障/: AvoidanceChallenge.html
(+210 files in other folders)
