<package>
  <name>mobile_dual_arm</name>
  <version>0.1.0</version>
  <description>mobile_dual_arm</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>dual_arm_control</run_depend>
  <run_depend>single_arm_description</run_depend>
  <run_depend>single_arm_R_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
