<?xml version="1.0"?>
<package>
  <name>vacuum_cmd_msg</name>
  <version>0.0.0</version>
  <description>The vacuum_cmd_msg package</description>
  <maintainer email="youjun@todo.todo">youjun</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
