<?xml version="1.0"?>
<package format="2">
  <name>robotis_device</name>
  <version>0.2.9</version>
  <description>
    The package that manages device information of ROBOTIS robots.
    This package is used when reading device information with the robot information file
    from the robotis_controller package.
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/robotis_device</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/robotis_framework_packages/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamixel_sdk</depend>
</package>
